test_cases/tests/axum/extract_self_ref.stderr
error: Handlers must only take owned values
  --> tests/axum/extract_self_ref.rs:25:22
   |
25 |     async fn handler(&self) {}
   |                      ^^^^^
